--- a/less/blocks/_base.less
+++ b/less/blocks/_base.less
@@ -7,6 +7,7 @@ body {
 }
 
 #overlay {
+    display: none;
     position: fixed;
     top: 0;
     bottom: 0;
@@ -19,6 +20,7 @@ body {
 }
 
 #overlay.active {
+    display: block;
     opacity: 0.5;
 }
 
