--- a/less/blocks/_header.less
+++ b/less/blocks/_header.less
@@ -3,6 +3,8 @@
     top: 0;
     left: 0;
     right: 0;
+    background-color: #fff;
+    z-index: 1;
 }
 
 .header {
@@ -21,7 +23,8 @@
     @media (min-width: 1200px) {
         padding-left: 2px;
         padding-right: 29px;
-        padding-top: 54px; 
+        padding-top: 54px;
+        padding-bottom: 30px;
     }
 
 }
